# spam-filter

./: CHANGELOG.md  LICENSE  README.md  spam-filter.cabal
app/: Main.hs
