cabal-version:      3.0
name:               spam-filter
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             rkc
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable spam-filter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      text >= 1.2 && <1.3,
                      containers >= 0.6 && <0.7,
                      directory >= 1.3 && <1.4,
                      bytestring >= 0.10 && < 0.12
    hs-source-dirs:   app
    default-language: Haskell2010
